@startuml
'https://plantuml.com/class-diagram

skinparam monochrome true
skinparam shadowing false

title Class Diagram - As an Admin, I want to add new types of operations, so that I can reflect the available medical procedures in the system.

class Admin{

}




class User{
    +ID: long
    +Username: String
    +Role: String
    +Email: String
}

class OperationType{
    +ID:long
    +Name:String
    +Staff: Staff 
    +EstimatedDuration : Date

}



class SessionManager {
    +CreateSession(SessionToken token, Admin admin): Session
    +InvalidateSession(): void
}

class Session {
    +SessionID: string
    +Admin: Admin
    +CreatedAt: DateTime
    +ExpiresAt: DateTime
}
class IAMService {
    +Authenticate(IAMCredentials credentials): SessionToken
}



class SessionToken {
    +Token: string
    +Expiration: DateTime
    +IsValid(): bool
}

class OperationTypeController{
    +CreateOperationType(OperationTypeDTO dto): OperationType
    
}

class OperationTypeService {
    +CreateOperationType(OperationTypeDTO dto): OperationType
}
class OperationTypeRepository {
    +CreateOperationType(OperationTypeDTO dto): OperationType
}


Admin-|>User
Admin --> SessionManager : uses
IAMService --> SessionToken : returns
SessionManager --> Session : creates
Admin --> IAMService : authenticates with
Admin --> OperationTypeController : inserts data into
OperationTypeController-->OperationTypeService: creates typeOperation
operations-->OperationTypeController:uses
OperationTypeService-->OperationTypeRepository: creates typeOperation
SessionToken --> Session : verifies

@enduml